--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ jupyter = "^1.0.0"
 flake8 = "^7.1.1"
 black = "^24.8.0"
 mypy = "^1.11.1"
+pre-commit = "^3.8.0"
 
 [build-system]
 requires = ["poetry-core"]
